
buildscript {
    repositories {
        mavenCentral ()
        maven {url 'http://repo1.maven.org/maven2'}
    }
}

subprojects {


    version=0.62
    group = 'org.egripse'

    apply {
        plugin 'maven'
        plugin 'java'
        plugin 'groovy'
        plugin 'eclipse'
        plugin 'idea'
    }

    repositories {
        mavenCentral () 
        maven {
           url 'http://www.fornax-platform.org/m2/repository'
        }
    }

    dependencies {
      compile localGroovy()
      compile gradleApi()
      testCompile 'junit:junit:4.12'
      testCompile  'com.google.guava:guava:18.0'
      testCompile  'commons-io:commons-io:2.4' // bei Bernd nicht dabei ... // testCompile

    }

  /**uploadArchives {
    repositories {
        mavenDeployer {
            repository(url:'https://api.bintray.com/maven/markusoley/egripse/eclipsefeature') {
                String username = System.properties['bintray.username']
                String password = System.properties['bintray.password']
                authentication( userName: username, password: password)
            }
        }
    }
  }**/


  uploadArchives {
    repositories {
        mavenDeployer {
            repository(url:System.properties['maven.url']) {
                String username = System.properties['maven.user']
                String password = System.properties['maven.password']
                authentication( userName: username, password: password)
            }
        }
    }
  }


    task sourcesJar(type: Jar, dependsOn: classes) {
      classifier = 'sources'
      from sourceSets.main.allSource
    }
 
    artifacts {
      archives sourcesJar
    }

    // Tests in package integration are only called in task integrationtest and tests in
    // package reallife are called in task reallifetest
    test {
        exclude "**/integrationtest/**"
    }

    task integrationtest(type: Test) {
        include "**/integrationtest/**"
        jvmArgs "-XX:MaxPermSize=128m"
    }

    task reallifetest(type: Test) {
        include "**/reallife/**"
    }

    dependencies {
        compile gradleApi()
        compile localGroovy()
    }
}

subprojects {
  sourceCompatibility = 1.8
}
